add tests for cli